--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -38,9 +38,9 @@
                                 <h4>₹ <%= product.price %>
                                 </h4>
                             </div>
-                            <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="">
+                            <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="/cart/add/<%= product._id %>">
                                 <i class="ri-add-line"></i>
-                            </a>
+                            </a>                            
                         </div>
                     </div>
                     <% }) %>
